WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78967
AXDescription for HTML5 footer and ARIA role contentinfo incorrect
https://bugs.webkit.org/show_bug.cgi?id=78967
Summary
AXDescription for HTML5 footer and ARIA role contentinfo incorrect
Steve Faulkner
Reported
2012-02-18 10:52:43 PST
Currently the AXRoleDescription string for AXSubRole= AXLandmarkContentInfo is "content". This is ambiguous and does not convey the meaning of the role. Suggest changing the AXRoleDescription to "content information". The same is used for the HTML5 footer element. In this case it is recommended that the AXRoleDescription be changed to "footer" to disambiguate it from The ARIA landmark contentinfo role as it is not the same. References: HTML5 4.4.9 The footer element
http://dev.w3.org/html5/spec/the-footer-element.html#the-footer-element
WAI - ARIA 1.0 5. The Roles Model
http://www.w3.org/TR/wai-aria/roles#contentinfo
HTML to Platform Accessibility APIs Implementation Guide
http://dvcs.w3.org/hg/html-api-map/raw-file/tip/Overview.html
Using WAI ARIA Landmark Roles -
http://www.paciellogroup.com/blog/2010/10/using-wai-aria-landmark-roles/
Attachments
patch to change content -> content information
(7.95 KB, patch)
2012-02-20 08:27 PST
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
patch to add role description for footer elements
(10.92 KB, patch)
2012-02-20 20:48 PST
,
chris fleizach
webkit-ews
: commit-queue-
Details
Formatted Diff
Diff
patch to add separate footer role description
(11.37 KB, patch)
2012-02-27 17:47 PST
,
chris fleizach
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
patch for footer role
(12.69 KB, patch)
2012-02-27 23:07 PST
,
chris fleizach
gustavo.noronha
: commit-queue-
Details
Formatted Diff
Diff
patch for footer role
(12.46 KB, patch)
2012-03-05 17:58 PST
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2012-02-20 08:27:59 PST
Created
attachment 127820
[details]
patch to change content -> content information
chris fleizach
Comment 2
2012-02-20 20:48:56 PST
Created
attachment 127908
[details]
patch to add role description for footer elements
chris fleizach
Comment 3
2012-02-20 20:50:02 PST
Comment on
attachment 127908
[details]
patch to add role description for footer elements View in context:
https://bugs.webkit.org/attachment.cgi?id=127908&action=review
> Source/WebCore/English.lproj/Localizable.strings:567 >
this was part of the previous patch, got caught up in this patch
Early Warning System Bot
Comment 4
2012-02-20 21:45:59 PST
Comment on
attachment 127908
[details]
patch to add role description for footer elements
Attachment 127908
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/11558022
chris fleizach
Comment 5
2012-02-27 17:47:25 PST
Created
attachment 129151
[details]
patch to add separate footer role description
WebKit Review Bot
Comment 6
2012-02-27 20:51:51 PST
Comment on
attachment 129151
[details]
patch to add separate footer role description
Attachment 129151
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/11639460
chris fleizach
Comment 7
2012-02-27 23:07:12 PST
Created
attachment 129194
[details]
patch for footer role
WebKit Review Bot
Comment 8
2012-02-27 23:10:33 PST
Please wait for approval from
fishd@chromium.org
before submitting because this patch contains changes to the Chromium public API.
Collabora GTK+ EWS bot
Comment 9
2012-02-28 06:54:50 PST
Comment on
attachment 129194
[details]
patch for footer role
Attachment 129194
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/11662158
Darin Fisher (:fishd, Google)
Comment 10
2012-02-28 11:13:38 PST
Comment on
attachment 129194
[details]
patch for footer role Chromium WebKit API changes LGTM
chris fleizach
Comment 11
2012-03-05 17:58:10 PST
Created
attachment 130253
[details]
patch for footer role
chris fleizach
Comment 12
2012-03-14 23:02:03 PDT
content -> content info
http://trac.webkit.org/changeset/110825
chris fleizach
Comment 13
2012-03-14 23:32:50 PDT
footer role->
http://trac.webkit.org/changeset/110828
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug