AXDescription for ARIA role contentinfo incorrect https://bugs.webkit.org/show_bug.cgi?id=78967

Reviewed by Beth Dakin.

Source/WebCore:

Test: platform/mac/accessibility/aria-grouping-roles.html

* English.lproj/Localizable.strings:
* platform/LocalizedStrings.cpp:
(WebCore::AXARIAContentGroupText):

LayoutTests:

* platform/mac/accessibility/aria-grouping-roles-expected.txt:
* platform/mac/accessibility/aria-grouping-roles.html:



Canonical link: https://commits.webkit.org/98387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110825 268f45cc-cd09-0410-ab3c-d52691b4dbfc